--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CG230422</title>
+    <title>Moving Text Animation</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
   </head>
   <body>
     <section class="container">
-      <p class="title">The pixel perfect artisan 💡 think - create*</p>
+      <p class="title">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+        aspernatur.
+      </p>
     </section>
     <script src="js/script.js"></script>
   </body>
